# engine_4

./: .gitignore  Cargo.toml  README.org  bacon.toml  copy_project.sh  shell.nix  todo.org
assets/models/: beachball.blend  beachball.blend1  beachball.mtl  cube.blend  cube.blend1  cube.mtl  suzanne.blend  suzanne.blend1
assets/scripts/: colors.py  lucas.gd  shell.nix
assets/shaders/blinn_phong/: fragment.glsl
assets/shaders/circle/: fragment.glsl  fragment.glsl.bak  vertex.glsl
assets/shaders/flat/: vertex.glsl
assets/shaders/gourad/: fragment.glsl  vertex.glsl
assets/shaders/sprite/: vertex.glsl
crates/engine_4_macros/: Cargo.toml
crates/engine_4_macros/src/: lib.rs
crates/include_folder/: Cargo.toml  README.md  test.rs
crates/include_folder/include_folder_macros/: Cargo.toml
crates/include_folder/include_folder_macros/src/: lib.rs
crates/include_folder/include_folder_shared/: Cargo.toml
crates/include_folder/include_folder_shared/src/: globbing.rs  lib.rs
crates/include_folder/src/: main.rs
crates/include_folder_2/macros/: Cargo.toml
crates/include_folder_2/macros/src/: lib.rs  main.rs
crates/si/: Cargo.toml
crates/si/si_macros/: Cargo.toml
crates/si/si_macros/src/: lib.rs
crates/si/src/: lib.rs
documentation/: book.toml
documentation/src/: 2d_shapes.md  SUMMARY.md  creating_a_window.md  input.md
documentation/src/.2d_shapes/: .md
examples/: 3d.rs  3d_render_textures.rs  action_mapping.rs  animation.rs  default_material.rs  demo.rs  ellipse.rs  fonts.rs  image.rs  lucas.rs  material.rs  music_composition.rs  physics.rs  post_processing.rs  post_processing_2.rs  render_textures.rs  sound.rs  specular.rs  sprite.rs  spritesheet.rs  storage.rs  text.rs  texture.rs  texture_positioning.rs  textures.rs
examples/material_shader/: dissolve_fragment.glsl  dissolve_vertex.glsl  fragment.glsl  holographic_fragment.glsl  holographic_vertex.glsl  outline_fragment.glsl  vertex.glsl
src/: animation.rs  api.rs  buffers.rs  camera.rs  collisions.rs  color.rs  config.rs  debugging.rs  draw_queue.rs  draw_queue_2d.rs  draw_queue_3d.rs  image.rs  input.rs  lib.rs  main.rs  materials.rs  object_3d.rs  physics.rs  post_processing.rs  prelude.rs  programs.rs  render_pipeline.rs  shapes.rs  shapes_2d.rs  shapes_3d.rs  sound.rs  text_rendering.rs  textures.rs  user_storage.rs  utils.rs
src/camera/: mod.rs
src/camera/controllers/: orbit.rs  pan.rs
src/collisions/: mod.rs  ray.rs
src/color/: u8.rs
src/debugging/: grid.rs
src/input/: gamepad.rs
src/slop/: tests.rs
src/textures/: atlas.rs
src/transform/: mod.rs
src/utils/: usize_rect.rs
