[package]
name = "include_folder"
version = "0.3.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.96"
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.8.23"
ron = "0.10.1"
image = "0.25.6"
